--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,4 +33,7 @@ pytest-asyncio = "^1.1.0"
 requests = "^2.32.5"
 flake8 = "^7.3.0"
 isort = "^6.0.1"
+flake8-docstrings = "^1.7.0"
+flake8-black = "^0.3.6"
+httpx = "^0.28.1"
 
