--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,4 +42,4 @@ jobs:
               run: poetry run flake8 app/ tests/ --statistics --show-source
 
             - name: Run Tests with Pytest
-              run: poetry run pytest -v --cov=app --cov-report=xml tests/
+              run: poetry run pytest -vv
