Create current Dockerfile

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.DS_Store
+Thumbs.db
+.dockerignore
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -42,6 +46,7 @@ htmlcov/
 .nox/
 .coverage
 .coverage.*
+htmlcov/
 .cache
 nosetests.xml
 coverage.xml
@@ -56,7 +61,8 @@ cover/
 *.pot
 
 # Django stuff:
-*.log
+*
+logs
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -105,7 +111,7 @@ ipython_config.py
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
 #   commonly ignored for libraries.
 #   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
+poetry.lock
 #poetry.toml
 
 # pdm
@@ -173,7 +179,7 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
 
 # Abstra
 # Abstra is an AI-powered process automation framework.
@@ -186,7 +192,7 @@ cython_debug/
 #  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
 #  and can be added to the global gitignore or merged into this file. However, if you prefer, 
 #  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
+.vscode/
 
 # Ruff stuff:
 .ruff_cache/
