--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ dependencies = [
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
+    "google-api-python-client (>=2.179.0,<3.0.0)",
+    "google-cloud-bigquery (>=3.35.1,<4.0.0)",
+    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
+    "google-auth (>=2.40.3,<3.0.0)",
+    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
+    "dotenv (>=0.9.9,<0.10.0)",
 ]
 
 
